--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,14 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "^1.0.100"
-arrow = { version = "^56.2.0", features = ["default", "ipc_compression"] }
-clap = { version = "^4.5.49", features = ["default", "derive"] }
+arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
+clap = { version = "^4.5.53", features = ["default", "derive"] }
 clio = { version = "^0.3.5", features = ["clap-parse"] }
-datafusion = "^50.2.0"
-duckdb = { version = "^1.4.1", features = ["appender-arrow", "bundled"] }
+datafusion = "^51.0.0"
 futures = "^0.3.31"
 glob = "^0.3.3"
 pg_escape = "^0.1.1"
-parquet = { version = "^56.2.0", features = [
+parquet = { version = "^57.0.0", features = [
   "default",
   "async",
   "json",
@@ -38,21 +37,18 @@ serde_json = "^1.0.145"
 serde = { version = "^1.0.228", features = ["derive"] }
 async-trait = "^0.1.89"
 strum = "^0.27.2"
+strum_macros = "^0.27.2"
 uuid = { version = "^1.18.1", features = ["v4"] }
 
 [features]
 default = []
 
 [dev-dependencies]
-assert_cmd = "^2.0.17"
+
+assert_cmd = "^2.1.1"
 predicates = "^3.1.3"
 rand = "^0.9.2"
 criterion = { version = "^0.7.0", features = ["html_reports", "async_tokio"] }
-duckdb = { version = "^1.4.1", features = [
-  "appender-arrow",
-  "chrono",
-  "bundled",
-] }
 chrono = "0.4.42"
 
 [[bench]]
