--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ parquet = { version = "^57.0.0", features = [
   "json",
   "arrow_canonical_extension_types",
 ] }
+percent-encoding = "^2.3.1"
 sha2 = "^0.10.9"
 tempfile = "^3.23.0"
 tokio = { version = "^1.48.0", features = ["full"] }
