--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ parquet = { version = "^57.0.0", features = [
   "arrow_canonical_extension_types",
 ] }
 percent-encoding = "^2.3.1"
+minijinja = "^2.12.0"
 sha2 = "^0.10.9"
 tempfile = "^3.23.0"
 tokio = { version = "^1.48.0", features = ["full"] }
