--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ anyhow = "^1.0.100"
 arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
 clap = { version = "^4.5.53", features = ["default", "derive"] }
 clio = { version = "^0.3.5", features = ["clap-parse"] }
-datafusion = "^51.0.0"
+datafusion = { git = "https://github.com/apache/datafusion.git", rev = "1cc9bcd52e5901f9085864c032c5f51a1932a075" }
 futures = "^0.3.31"
 glob = "^0.3.3"
 pg_escape = "^0.1.1"
