--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "^1.0.100"
+rayon = "^1.10"
 arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
 clap = { version = "^4.5.53", features = ["default", "derive"] }
 datafusion = { git = "https://github.com/apache/datafusion.git", rev = "1cc9bcd52e5901f9085864c032c5f51a1932a075" }
@@ -48,9 +49,13 @@ arrow-schema = "56"
 default = []
 
 [dev-dependencies]
-
 assert_cmd = "^2.1.1"
+criterion = { version = "^0.8", features = ["html_reports"] }
 predicates = "^3.1.3"
+
+[[bench]]
+name = "parquet_writer"
+harness = false
 
 [profile.release]
 lto = true
