--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = "^1.0.100"
 rayon = "^1.10"
 arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
 clap = { version = "^4.5.53", features = ["default", "derive"] }
+clap_complete = "^4.5"
 datafusion = { git = "https://github.com/apache/datafusion.git", rev = "1cc9bcd52e5901f9085864c032c5f51a1932a075" }
 futures = "^0.3.31"
 glob = "^0.3.3"
