--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,14 +40,20 @@ serde_json = "^1.0.145"
 async-trait = "^0.1.89"
 strum_macros = "^0.27.2"
 uuid = { version = "^1.18.1", features = ["v4"] }
+humansize = "2.1"
+num-format = "0.4"
 
 # Vortex support (Arrow 56 - compatible with our Arrow 57)
 vortex = { version = "0.56.0", features = ["tokio", "files"] }
+vortex-array = "0.56.0"
 vortex-session = "0.56.0"
 async-stream = "0.3"
 arrow-array = "56"
 arrow-ipc = "56"
 arrow-schema = "56"
+tokio-util = { version = "0.7", features = ["compat"] }
+chrono = "0.4.42"
+camino = { version = "1.2.2", features = ["serde1"] }
 
 [features]
 default = []
@@ -65,6 +71,15 @@ harness = false
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[profile.profiling]
+inherits = "release"
+debug = true
+
+# NOTE: native profile requires RUSTFLAGS="-C target-cpu=native"
+# use `just build-native` which sets this automatically
+[profile.native]
+inherits = "release"
 
 [lints.clippy]
 case_sensitive_file_extension_comparisons = "warn"
