Revamp parquet writing yet again (#61)
* Simplify how we're projecting the stream when writing out

* Imports

* Revamp the parquet writer

* Fix a couple bugs

* Refactor to use internal structures and not be so wasteful

* Refactoring and better tests

* Get rid of OnceLock stuff

* Error messages and tests

* Handle error propagation a little better

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,7 @@
-[build]
+# xcode 15 comes with ld-prime, which beats lld on macos
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+
+[target.aarch64-unknown-linux-gnu]
 rustflags = ["-C", "link-arg=-fuse-ld=lld"]
