--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,18 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "^1.0.100"
-rayon = "^1.10"
+async-stream = "0.3"
+async-trait = "^0.1.89"
 arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
+camino = { version = "1.2.2", features = ["serde1"] }
+chrono = "0.4.42"
 clap = { version = "^4.5.53", features = ["default", "derive"] }
 clap_complete = "^4.5"
 datafusion = { git = "https://github.com/apache/datafusion.git", rev = "1cc9bcd52e5901f9085864c032c5f51a1932a075" }
 futures = "^0.3.31"
 glob = "^0.3.3"
+minijinja = "^2.12.0"
+owo-colors = "4"
 parquet = { version = "^57.0.0", features = [
   "default",
   "async",
@@ -30,15 +35,21 @@ parquet = { version = "^57.0.0", features = [
   "arrow_canonical_extension_types",
 ] }
 percent-encoding = "^2.3.1"
-minijinja = "^2.12.0"
-owo-colors = "4"
-tabled = { version = "0.18", features = ["ansi"] }
-tempfile = "^3.23.0"
-tokio = { version = "^1.48.0", features = ["full"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0.145"
-async-trait = "^0.1.89"
 strum_macros = "^0.27.2"
+tabled = { version = "0.18", features = ["ansi"] }
+tempfile = "^3.23.0"
+tokio = { version = "^1.48.0", features = [
+  "rt-multi-thread",
+  "macros",
+  "io-util",
+  "fs",
+  "sync",
+] }
+tokio-par-util = "0.2.0"
+tokio-stream = "0.1.17"
+tokio-util = "0.7.17"
 uuid = { version = "^1.18.1", features = ["v4"] }
 humansize = "2.1"
 num-format = "0.4"
@@ -47,13 +58,9 @@ num-format = "0.4"
 vortex = { version = "0.56.0", features = ["tokio", "files"] }
 vortex-array = "0.56.0"
 vortex-session = "0.56.0"
-async-stream = "0.3"
 arrow-array = "56"
 arrow-ipc = "56"
 arrow-schema = "56"
-tokio-util = { version = "0.7", features = ["compat"] }
-chrono = "0.4.42"
-camino = { version = "1.2.2", features = ["serde1"] }
 
 [features]
 default = []
@@ -71,6 +78,13 @@ harness = false
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[profile.dev] # faster dev builds
+opt-level = 0
+debug = true
+
+[profile.dev.package."*"]
+opt-level = 2 # optimize deps, not your code
 
 [profile.profiling]
 inherits = "release"
