--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "^1.0.100"
+bytesize = "2"
 async-stream = "0.3"
 async-trait = "^0.1.89"
 arrow = { version = "^57.0.0", features = ["default", "ipc_compression"] }
