--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ parquet = { version = "^57.0.0", features = [
   "arrow_canonical_extension_types",
 ] }
 percent-encoding = "^2.3.1"
-rustc-hash = "2"
+rayon = "1.11.0"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0.145"
 strum_macros = "^0.27.2"
@@ -49,8 +49,6 @@ tokio = { version = "^1.48.0", features = [
   "fs",
   "sync",
 ] }
-tokio-par-util = "0.2.0"
-tokio-stream = "0.1.17"
 tokio-util = "0.7.17"
 uuid = { version = "^1.18.1", features = ["v4"] }
 humansize = "2.1"
