--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ chrono = "^0.4.43"
 clap = { version = "^4.5.54", features = ["default", "derive"] }
 clap_complete = "^4.5.65"
 datafusion = { git = "https://github.com/apache/datafusion.git", rev = "9f3ddcecd6033a9d55161175d5dbe29697a9a922" }
+flume = "0.12.0"
 futures = "^0.3.31"
 glob = "^0.3.3"
 humansize = "^2.1.3"
