--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,10 @@ camino = { version = "^1.2.2", features = ["serde1"] }
 chrono = "^0.4.43"
 clap = { version = "^4.5.54", features = ["default", "derive"] }
 clap_complete = "^4.5.65"
-datafusion = { git = "https://github.com/apache/datafusion.git", rev = "9f3ddcecd6033a9d55161175d5dbe29697a9a922" }
+datafusion = { version = "^52.1.0", features = [
+  "array_expressions",
+  "default",
+] }
 futures = "^0.3.31"
 glob = "^0.3.3"
 humansize = "^2.1.3"
@@ -38,7 +41,6 @@ parquet = { version = "^57.2.0", features = [
   "arrow_canonical_extension_types",
 ] }
 percent-encoding = "^2.3.2"
-rayon = "1.11.0"
 serde = { version = "^1.0.228", features = ["derive"] }
 serde_json = "^1.0.149"
 strum_macros = "^0.27.2"
@@ -51,7 +53,6 @@ tokio = { version = "^1.49.0", features = [
   "fs",
   "sync",
 ] }
-tokio-util = "^0.7.18"
 uuid = { version = "^1.19.0", features = ["v4"] }
 vortex = { version = "^0.58.0", features = ["tokio", "files"] }
 
