--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ default = []
 assert_cmd = "^2.1.2"
 criterion = { version = "^0.8.1", features = ["html_reports"] }
 predicates = "^3.1.3"
+rand = "0.9.2"
 
 [[bench]]
 name = "parquet_writer"
